--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ oxt_name = "OooPip" # https://tinyurl.com/ymeh4c9j#oxt_name
 py_pkg_dir = "py_pkgs" # https://tinyurl.com/ymeh4c9j#py_pkg_dir
 py_pkg_files = [] # https://tinyurl.com/ymeh4c9j#py_pkg_files
 py_pkg_names = [] # ["ooodev", "ooo"] https://tinyurl.com/ymeh4c9j#py_pkg_names
-token_file_ext = ["txt", "xml", "xcu", "xcs", "py","components"] # https://tinyurl.com/ymeh4c9j#token_file_ext
+token_file_ext = ["txt", "xml", "xcu", "xcs", "py","components", "json"] # https://tinyurl.com/ymeh4c9j#token_file_ext
 update_file = "update.xml" # https://tinyurl.com/ymeh4c9j#update_file
 zip_preinstall_pure = true # https://tinyurl.com/ymeh4c9j#zip_preinstall_pure
 window_timeout = 5 # https://tinyurl.com/ymeh4c9j#window_timeout number of seconds to wait for window to appear
@@ -58,6 +58,7 @@ platform = "all" # https://tinyurl.com/ymeh4c9j#platform
 startup_event = "OnStartApp" # OnStartApp or onFirstVisibleTask https://tinyurl.com/ymeh4c9j#startup_event
 show_progress = true # https://tinyurl.com/ymeh4c9j#show_progress
 delay_startup = true # determines if installing waits fo the window to load before installing https://tinyurl.com/ymeh4c9j#delay_startup
+libreoffice_debug_port = 5678
 
 [tool.oxt.requirements]
 # https://tinyurl.com/ymeh4c9j#tooloxtrequirements
@@ -66,6 +67,7 @@ delay_startup = true # determines if installing waits fo the window to load befo
 # If the requirements are platform specific, use the platform specific sections below
 # If the requirement is added here and in the platform specific section, the platform specific section takes precedence
 typing-extensions = ">=4.12.2"
+debugpy = ">=1.8"
 
 [[tool.oxt.py_packages]]
 # https://tinyurl.com/ymeh4c9j#tooloxtpy_packages
